fix title oversized on mobile devices

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -42,38 +42,44 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: 48px;
-    line-height: 61px;
+    font-size: 42px;
+    line-height: 52px;
+    word-break: break-word
+
+    @media (min-width: 640px)  {
+        font-size: 48px;
+        line-height: 60px;
+    } 
 }
 
 h2 {
-    font-size: 36px;
-    line-height: 46px;
+    font-size: 32px;
+    line-height: 40px;
+
+    @media (min-width: 640px)  {
+        font-size: 36px;
+        line-height: 46px;
+    }
 }
 
 h3 {
-    font-size: 30px;
-    line-height: 36px;
+    font-size: 26px;
+    line-height: 32px;
+
+    @media (min-width: 640px)  {
+        font-size: 30px;
+        line-height: 36px;
+    }
 }
 
 h4 {
-    font-size: 24px;
-    line-height: 32px;
-}
-
-.body-text {
-    font-size: 18px;
+    font-size: 22px;
     line-height: 28px;
-}
 
-.body-text2 {
-    font-size: 20px;
-    line-height: 28px;
-}
-
-.body-text3 {
-    font-size: 30px;
-    line-height: 36px;
+    @media (min-width: 640px)  {
+        font-size: 24px;
+        line-height: 32px;
+    }
 }
 
 a {
